--- a/Ans-11-web-page/style.css
+++ b/Ans-11-web-page/style.css
@@ -1,130 +1,113 @@
-*{
-	margin: 0px;
-	padding: 0px;
+* {
+  margin: 0px;
+  padding: 0px;
 }
-
 body {
-	background-color: #303030;
-	margin: 0px 60px;
-	font-family: 
+  background-color: #212121;
+  padding: 0px 30px;
 }
 
-/* Header */
-header{
-	background-color: #202020;
-	color: #bdbdbd;
-	padding: 5px 70px;
+/*----- Utility ---- */
+.layout {
+  width: 960px;
+  margin: auto;
+  padding: 5px 0px;
+}
+.no-decor {
+  text-decoration: none;
+}
+.light-font {
+  color: #c7c7c7;
+}
+.dark-font {
+  color: #555555;
+}
+.dark-bg {
+  background-color: #1b1b1b;
+}
+.light-bg {
+  background-color: #dfdfdf;
+}
+.default-pad {
+  padding-bottom: 10px;
+}
+.center-xy {
+  text-align: center;
+  font-size: 24px;
+  line-height: 360px; //improve
+}
+.mb-2 {
+  margin-bottom: 20px;
+}
+.left {
+  float: left;
+}
+.right {
+  float: right;
+}
+.left,
+.right {
+  font-size: 13px;
+  padding: 8px 0px;
+}
+.h-list-wrapper {
+  list-style-type: none;
+}
+.h-list-wrapper > * {
+  display: inline-block;
+  font-size: 12px;
+}
+/* ----------------- */
+
+nav {
+  background-color: #131313;
 }
 
-header nav {
-	background-color: #101010;
-	padding: 10px 8px;
-	margin: 10px 0px;
+nav ul li {
+  padding: 8px;
 }
 
-header nav ul {
-	list-style: none;
+.main {
+  background-color: #ffffff;
+  padding: 20px 0px;
 }
 
-header nav ul li {
-	display: inline;
-	padding: 5px 10px;
-	font-size: 13px;
+.banner {
+  height: 360px;
+  /* margin-bottom: 20px; */
 }
 
-/* Hero */
-#main {
-	background-color: #ffffff;
-	padding: 20px 70px;
+.article-wrapper p {
+  padding: 5px 13px;
 }
 
-/* Banner */
-#main #welcomeBanner{
-	width: 100%;
-	background-color: #202020;
-	margin: auto;
+hr {
+  width: 960px;
+  margin: auto;
+  margin-bottom: 10px;
+  border: 0.5px solid #c7c7c7;
 }
 
-#main #welcomeBanner p {
-	text-align: center;
-	font-size: 24px;
-	line-height: 360px;
-	color: #eeeeee;
+.card {
+  border: 0.5px solid #c7c7c7;
+  padding: 3px;
+  margin-right: 20px;
 }
 
-/* Article */
-#main #articleWrapper {
-	width: 960px;
-	background-color: #e0e0e0;
-	margin: 20px 0px 40px 0px;
-	
+.card:last-child {
+  margin-right: auto;
 }
 
-#main #articleWrapper p {
-	font-size: 13px;
-	line-height: 20px;
-	font-weight: 500;
-	padding: 8px;
-	color: #616161;
-	text-transform: uppercase;
+.holder {
+  height: 315px;
+  width: 215px;
 }
 
-/* Gallery */
-#main #gallery h5 {
-	color: #616161;
-	font-weight: bold;
-	font-size: 15px;
+.card p {
+  text-align: center;
+  padding: 5px;
 }
 
-#main #gallery hr {
-	border: 0.5px solid #bdbdbd;
-	margin: 5px 0px;
+footer {
+  height: 30px;
 }
-
-#card-wrapper {
-	margin: 30px 0px;
-	list-style: none;
-	width: 100%;
-}
-
-#card-wrapper li {
-	display: inline-block;
-	padding-right: 0px;
-}
-
-#card-wrapper .card div {
-	height: 315px;
-	width: 215px;
-	background-color: #212121;
-}
-
-#card-wrapper .card div p {
-	text-align: center;
-	line-height: 315px;
-	font-size: 18px;
-	color: #eeeeee;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
