--- a/Ans-12-form/style.css
+++ b/Ans-12-form/style.css
@@ -7,9 +7,6 @@
   font-family: "Roboto Condensed", sans-serif;
   font-size: 30px;
 }
-a {
-  text-decoration: none;
-}
 .left {
   float: left;
 }
@@ -28,26 +25,17 @@ a {
 .small {
   font-size: 14px;
 }
-.medium {
-  font-size: 15px;
-}
 .large {
   font-size: 20px;
-}
-.light-font {
-  color: #fff;
-}
-.dark-font {
-  color: #212121;
 }
 .patch {
   height: 25px;
   padding: 20px;
 }
 
-nav p,
-nav ul li a {
+nav a {
   color: rgb(27, 128, 128);
+  text-decoration: none;
 }
 
 nav {
@@ -62,14 +50,15 @@ hr {
 
 .form-wrapper {
   margin: 40px auto;
-  width: 350px;
+  width: 30%;
 }
 
 .form-head {
-  background-color: grey;
+  background-color: rgb(187, 187, 187);
   border-radius: 4px 4px 0px 0px;
   font-family: serif;
   font-weight: 600;
+  color: #fff;
 }
 
 form {
@@ -77,19 +66,61 @@ form {
   border-radius: 5px;
 }
 
-footer.patch {
-  margin-top: 10px;
-  background-color: #d5d5d5;
-}
-
-input.btn {
-  float: right;
-}
-
-.form-element {
-  margin: 12px 0px;
-}
-
 .form-body {
-  padding: 15px;
+  padding: 20px;
+}
+
+input[type="text"],
+input[type="file"] {
+  width: 95%;
+  border: 2px solid #ccc;
+  border-radius: 4px;
+  padding: 5px;
+}
+input.version {
+  width: 20%;
+}
+input[type="radio"] {
+  width: 40px;
+}
+input[type="submit"] {
+  border: none;
+  border-radius: 4px;
+  background-color: rgb(73, 172, 172);
+  padding: 8px;
+  color: #fff;
+}
+
+input,
+select,
+textarea {
+  margin-bottom: 10px;
+}
+
+label {
+  color: #666666;
+}
+
+textarea {
+  width: 100%;
+  height: 80px;
+  padding: 12px;
+  box-sizing: border-box;
+  border: 2px solid #ccc;
+  border-radius: 4px;
+  background-color: #fff;
+}
+
+select {
+  width: 100%;
+  border: none;
+  background-color: rgb(73, 172, 172);
+  padding: 5px;
+  border-radius: 4px;
+  color: #fff;
+  font-weight: 600;
+}
+
+footer.patch {
+  background-color: #e4e4e4;
 }
